--- a/animacions/cuerpo-humano-en.html
+++ b/animacions/cuerpo-humano-en.html
@@ -15,6 +15,41 @@
       font-size: 16px;
       line-height: 24px;
     }
+
+    .screen-mobile {
+      display: block;
+      pointer-events: inherit;
+    }
+
+    .screen-desktop {
+      display: none;
+      pointer-events: none;
+    }
+
+    @media (min-width: 768px) {
+      .screen-mobile {
+        display: block;
+        pointer-events: inherit;
+      }
+
+      .screen-desktop {
+        display: none;
+        pointer-events: none;
+      }
+    }
+    @media (min-width: 1024px) {
+      .screen-mobile {
+        display: none;
+        pointer-events: none;
+      }
+
+      .screen-desktop {
+        display: block;
+        pointer-events: inherit;
+      }
+    }
+
+
     header {
       max-width: 1024px;
     }
@@ -63,22 +98,28 @@
       -webkit-transition: all 0.2s ease-in-out;
       -o-transition: all 0.2s ease-in-out;
     }
-    nav ul li .btn[data-target="#contaminacio"] {
+    nav ul li .btn[data-target="#contaminacio"],
+    .toggle-cont.contaminacio .toggle-header {
       background-color: #34b7eb;
     }
-    nav ul li .btn[data-target="#soroll"] {
+    nav ul li .btn[data-target="#soroll"],
+    .toggle-cont.soroll .toggle-header {
       background-color: #004f9f;
     }
-    nav ul li .btn[data-target="#temperatura"] {
+    nav ul li .btn[data-target="#temperatura"],
+    .toggle-cont.temperatura .toggle-header {
       background-color: #f29700;
     }
-    nav ul li .btn[data-target="#activitatfisica"] {
+    nav ul li .btn[data-target="#activitatfisica"],
+    .toggle-cont.activitatfisica .toggle-header {
       background-color: #bb94c2;
     }
-    nav ul li .btn[data-target="#espaisnaturals"] {
+    nav ul li .btn[data-target="#espaisnaturals"],
+    .toggle-cont.espaisnaturals .toggle-header {
       background-color: #3aa336;
     }
-    nav ul li .btn[data-target="#tots"] {
+    nav ul li .btn[data-target="#tots"],
+    .toggle-cont.tots .toggle-header {
       background-color: #231f20;
     }
     nav ul li .btn.active {
@@ -103,6 +144,78 @@
       width: 100%;
       height: auto;
     }
+
+    .toggle-cont {
+      position: relative;
+      background: #fafafa;
+      margin-bottom: 4px;
+      color: #fff;
+    }
+    .toggle-btn {
+      position: absolute;
+      width: 100px;
+      top: 0;
+      right: 0;
+      height: 56px;
+      background: transparent url(images/ico-btn-toggle.svg) no-repeat center center;
+      background-size: 40% auto;
+      cursor: pointer;
+
+      transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -webkit-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+    }
+    .active .toggle-btn {
+      background: transparent url(images/ico-btn-toggle-active.svg) no-repeat center center;
+      background-size: 40% auto;
+
+      transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -webkit-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+    }
+    @media (max-width: 1023px) {
+      .toggle-btn,
+      .active .toggle-btn {
+        width: 40px;
+        background-size: 60% auto;
+      }  
+    }
+    
+    .toggle-header .titol {
+      font-family:'Platform'; font-weight: 300; letter-spacing: 1px;
+      margin: 0;
+      padding: 16px 10px;
+    }
+    .toggle-body {
+      width: 100%;
+      padding: 0;
+      overflow: hidden;
+      height: auto;
+      max-height: 0;
+      box-sizing: border-box;
+
+      transition: all .4s ease-in-out;
+      -moz-transition: all .4s ease-in-out;
+      -webkit-transition: all .4s ease-in-out;
+      -o-transition: all .4s ease-in-out;
+    }
+    .active .toggle-body {
+      max-height: 2000px;
+
+      transition: all .6s ease-in-out;
+      -moz-transition: all .6s ease-in-out;
+      -webkit-transition: all .6s ease-in-out;
+      -o-transition: all .6s ease-in-out;
+    }
+    .toggle-body-cont {
+      width: 100%;
+    }
+    .toggle-img {
+      position: relative;
+      max-width: 360px;
+    }
   </style>
 </head>
 
@@ -115,18 +228,19 @@
 
   <div class="graphic-container">
 
-    <nav>
-      <ul>
-        <li><a class="btn" data-target="#contaminacio">Air pollution</a></li>
-        <li><a class="btn" data-target="#soroll">Noise</a></li>
-        <li><a class="btn" data-target="#temperatura">Heat</a></li>
-        <li><a class="btn" data-target="#activitatfisica">Lack of physical activity</a></li>
-        <li><a class="btn" data-target="#espaisnaturals">Lack of natural spaces</a></li>
-        <li><a class="btn" data-target="#tots">All</a></li>
-      </ul>
-    </nav>
-
     <div class="screen-desktop">
+
+      <nav>
+        <ul>
+          <li><a class="btn" data-target="#contaminacio">Air pollution</a></li>
+          <li><a class="btn" data-target="#soroll">Noise</a></li>
+          <li><a class="btn" data-target="#temperatura">Heat</a></li>
+          <li><a class="btn" data-target="#activitatfisica">Lack of physical activity</a></li>
+          <li><a class="btn" data-target="#espaisnaturals">Lack of natural spaces</a></li>
+          <li><a class="btn" data-target="#tots">All</a></li>
+        </ul>
+      </nav>
+    
       <div id="inici" class="dibuix-cos active">
         <svg version="1.1" id="CosHuma" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 1440 1451.3" style="enable-background:new 0 0 1440 1451.3;" xml:space="preserve">
@@ -139,7 +253,7 @@
             .st5{fill:none;stroke:#F0A0A0;stroke-width:6.0028;stroke-linecap:round;stroke-miterlimit:10;}
             .st6{fill:#F0A0A0;}
             .st7{fill:none;}
-            .st8{font-family:'Platform'; font-weight: 300; letter-spacing: 1px;}
+            .st8{font-family:'Platform'; font-weight: 300; letter-spacing: 1.5px;}
             .st9{font-size:24.0054px;}
             .st10{letter-spacing:1;}
             .st11{fill:#004F9F;}
@@ -512,7 +626,7 @@
               </g>
               <g>
                 <rect x="119.6" y="589.7" class="st7" width="385.2" height="138.5"/>
-                <text transform="matrix(1 0 0 1 119.5981 613.8391)" class="st1 st8 st17 st10">Breast</text>
+                <text transform="matrix(1 0 0 1 119.5981 613.8391)" class="st1 st8 st17 st10">BREAST</text>
               </g>
               <polyline class="st18" points="119.6,567.3 482.4,565.9 632.4,374.8    "/>
             </g>
@@ -552,11 +666,11 @@
               <circle class="st14" cx="1335.1" cy="352.8" r="5.5"/>
               <g>
                 <rect x="964.7" y="173.5" class="st7" width="357.8" height="214.7"/>
-                <text transform="matrix(1 0 0 1 981.1365 191.0533)"><tspan x="0" y="0" class="st1 st8 st9 st10">Chronic Obstructive Pulmonary </tspan><tspan x="173.1" y="26" class="st1 st8 st9 st10">Disease (COPD) </tspan><tspan x="261.1" y="62" class="st1 st8 st9 st10">Asthma</tspan><tspan x="110.4" y="98" class="st1 st8 st9 st10">Respiratory diseases </tspan><tspan x="222.3" y="134" class="st1 st8 st9 st10">Pneumonia</tspan><tspan x="211.3" y="170" class="st1 st8 st9 st10">Lung cancer</tspan></text>
+                <text textLength="1080" transform="matrix(1 0 0 1 981.1365 191.0533)"><tspan x="0" y="0" class="st1 st8 st9 st10">Chronic Obstructive Pulmonary </tspan><tspan x="173.1" y="26" class="st1 st8 st9 st10">Disease (COPD) </tspan><tspan x="261.1" y="62" class="st1 st8 st9 st10">Asthma</tspan><tspan x="110.4" y="98" class="st1 st8 st9 st10">Respiratory diseases </tspan><tspan x="222.3" y="134" class="st1 st8 st9 st10">Pneumonia</tspan><tspan x="211.3" y="170" class="st1 st8 st9 st10">Lung cancer</tspan></text>
               </g>
               <g>
                 <rect x="937.3" y="115.6" class="st7" width="385.2" height="138.5"/>
-                <text transform="matrix(1 0 0 1 1019.7781 139.6798)" class="st1 st8 st17 st10">Respiratory tract</text>
+                <text textLength="280" transform="matrix(1 0 0 1 1039.7781 139.6798)" class="st1 st8 st17 st10">RESPIRATORY TRACT</text>
               </g>
               <polyline class="st18" points="1322.6,93.2 959.8,91.7 780.1,363.7     "/>
             </g>
@@ -579,11 +693,11 @@
               <circle class="st14" cx="1335.1" cy="637.4" r="5.5"/>
               <g>
                 <rect x="965.9" y="519" class="st7" width="357.8" height="151.9"/>
-                <text transform="matrix(1 0 0 1 1089.3167 536.5629)"><tspan x="0" y="0" class="st1 st8 st9 st10">Myocardial infarction</tspan><tspan x="115.6" y="36" class="st1 st8 st9 st10">Arrhythmia</tspan><tspan x="-30.5" y="72" class="st1 st8 st9 st10">Heart congestive failure</tspan><tspan x="-32.9" y="108" class="st1 st8 st9 st10">Cardiovascular diseases</tspan></text>
+                <text textLength="880" transform="matrix(1 0 0 1 1089.3167 536.5629)"><tspan x="0" y="0" class="st1 st8 st9 st10">Myocardial infarction</tspan><tspan x="115.6" y="36" class="st1 st8 st9 st10">Arrhythmia</tspan><tspan x="-30.5" y="72" class="st1 st8 st9 st10">Heart congestive failure</tspan><tspan x="-32.9" y="108" class="st1 st8 st9 st10">Cardiovascular diseases</tspan></text>
               </g>
               <g>
                 <rect x="938.5" y="460.3" class="st7" width="385.2" height="45.2"/>
-                <text transform="matrix(1 0 0 1 1229.5667 484.3839)" class="st1 st8 st17 st10">Heart</text>
+                <text textLength="90" transform="matrix(1 0 0 1 1229.5667 484.3839)" class="st1 st8 st17 st10">HEART</text>
               </g>
               <polyline class="st18" points="1323.7,437.9 960.9,436.5 760.1,395.1     "/>
             </g>
@@ -598,11 +712,11 @@
             <g>
               <g>
                 <rect x="961.5" y="842.7" class="st7" width="360.9" height="195.4"/>
-                <text transform="matrix(1 0 0 1 1154.6245 860.2008)"><tspan x="0" y="0" class="st1 st8 st9 st10">Premature birth </tspan><tspan x="-99.1" y="36" class="st1 st8 st9 st10">Reduced weight at birth </tspan><tspan x="35.7" y="72" class="st1 st8 st9 st10">Preclampsia</tspan><tspan x="-125" y="108" class="st1 st8 st9 st10">Reduction in sperm quality</tspan></text>
+                <text textLength="870" transform="matrix(1 0 0 1 1154.6245 860.2008)"><tspan x="0" y="0" class="st1 st8 st9 st10">Premature birth </tspan><tspan x="-99.1" y="36" class="st1 st8 st9 st10">Reduced weight at birth </tspan><tspan x="35.7" y="72" class="st1 st8 st9 st10">Preclampsia</tspan><tspan x="-125" y="108" class="st1 st8 st9 st10">Reduction in sperm quality</tspan></text>
               </g>
               <g>
                 <rect x="955.7" y="747" class="st7" width="366.7" height="123.5"/>
-                <text transform="matrix(1 0 0 1 993.4829 771.1512)"><tspan x="0" y="0" class="st1 st8 st17">Reproductive system </tspan><tspan x="178.7" y="37.5" class="st1 st8 st17">and fetus     </tspan></text>
+                <text textLength="476" transform="matrix(1 0 0 1 993.4829 771.1512)"><tspan x="0" y="0" class="st1 st8 st17">REPRODUCTIVE SYSTEM</tspan><tspan x="170.7" y="37.5" class="st1 st8 st17">AND FETUS</tspan></text>
               </g>
               <polyline class="st18" points="754.3,604.1 936.7,724.1 1322.4,722.9     "/>
               <circle class="st14" cx="1334.9" cy="852.6" r="5.5"/>
@@ -652,7 +766,7 @@
               C769.7,102.3,766.1,98.7,761.7,98.7z M741.4,101.2H741c0.1-0.1,0.2-0.1,0.3-0.2C741.3,101.1,741.4,101.2,741.4,101.2z"/>
             <g>
               <rect x="119.2" y="114.5" class="st7" width="283.7" height="41.9"/>
-              <text transform="matrix(1 0 0 1 119.2024 138.6234)" class="st1 st8 st17 st10">Head</text>
+              <text transform="matrix(1 0 0 1 119.2024 138.6234)" class="st1 st8 st17 st10">HEAD</text>
             </g>
             <line class="st18" x1="731.6" y1="92.1" x2="119.2" y2="90.4"/>
           </g>
@@ -687,11 +801,11 @@
               <circle class="st14" cx="1335" cy="1201" r="5.5"/>
               <g>
                 <rect x="964.6" y="1153.2" class="st7" width="357.8" height="133.5"/>
-                <text transform="matrix(1 0 0 1 1171.8035 1170.7064)"><tspan x="0" y="0" class="st1 st8 st9 st10">Hypertension</tspan><tspan x="-124.8" y="36" class="st1 st8 st9 st10">Deep venous thrombosis</tspan></text>
+                <text textLength="420" transform="matrix(1 0 0 1 1171.8035 1170.7064)"><tspan x="0" y="0" class="st1 st8 st9 st10">Hypertension</tspan><tspan x="-124.8" y="36" class="st1 st8 st9 st10">Deep venous thrombosis</tspan></text>
               </g>
               <g>
                 <rect x="937.2" y="1094.7" class="st7" width="385.2" height="59.8"/>
-                <text transform="matrix(1 0 0 1 1189.8933 1118.8661)" class="st1 st8 st17 st10">Arteries</text>
+                <text extLength="120" transform="matrix(1 0 0 1 1197.8933 1118.8661)" class="st1 st8 st17 st10">ARTERIES</text>
               </g>
               <line class="st18" x1="1322.5" y1="1071" x2="782.8" y2="1069.3"/>
             </g>
@@ -793,6 +907,92 @@
       <div id="tots" class="dibuix-cos">
         <img src="images/img-cos-tots-en.svg">
       </div>
+    </div>
+
+    <div class="screen-mobile">
+      <!-- Contaminacio -->
+      <div class="toggle-cont contaminacio">
+        <div class="toggle-btn"></div>
+        <div class="toggle-header">
+          <h2 class="titol">Air pollution</h2>
+        </div>
+        <div class="toggle-body">
+          <div class="toggle-body-cont">
+            <img class="toggle-img" src="images/img-cos-contaminacio-en-xs.svg">
+          </div>
+        </div>
+      </div>
+      <!-- Contaminacio -->
+
+      <!-- Soroll -->
+      <div class="toggle-cont soroll">
+        <div class="toggle-btn"></div>
+        <div class="toggle-header">
+          <h2 class="titol">Noise</h2>
+        </div>
+        <div class="toggle-body">
+          <div class="toggle-body-cont">
+            <img class="toggle-img" src="images/img-cos-soroll-en-xs.svg">
+          </div>
+        </div>
+      </div>
+      <!-- Soroll -->
+
+      <!-- Temperatura -->
+      <div class="toggle-cont temperatura">
+        <div class="toggle-btn"></div>
+        <div class="toggle-header">
+          <h2 class="titol">Heat</h2>
+        </div>
+        <div class="toggle-body">
+          <div class="toggle-body-cont">
+            <img class="toggle-img" src="images/img-cos-temperatura-en-xs.svg">
+          </div>
+        </div>
+      </div>
+      <!-- Temperatura -->
+
+      <!-- ActivitatFisica -->
+      <div class="toggle-cont activitatfisica">
+        <div class="toggle-btn"></div>
+        <div class="toggle-header">
+          <h2 class="titol">Lack of physical activity</h2>
+        </div>
+        <div class="toggle-body">
+          <div class="toggle-body-cont">
+            <img class="toggle-img" src="images/img-cos-activitatfisica-en-xs.svg">
+          </div>
+        </div>
+      </div>
+      <!-- ActivitatFisica -->
+
+      <!-- EspaisNaturals -->
+      <div class="toggle-cont espaisnaturals">
+        <div class="toggle-btn"></div>
+        <div class="toggle-header">
+          <h2 class="titol">Lack of natural spaces</h2>
+        </div>
+        <div class="toggle-body">
+          <div class="toggle-body-cont">
+            <img class="toggle-img" src="images/img-cos-espaisnaturals-en-xs.svg">
+          </div>
+        </div>
+      </div>
+      <!-- EspaisNaturals -->
+
+      <!-- Tots -->
+      <div class="toggle-cont tots">
+        <div class="toggle-btn"></div>
+        <div class="toggle-header">
+          <h2 class="titol">All</h2>
+        </div>
+        <div class="toggle-body">
+          <div class="toggle-body-cont">
+            <img class="toggle-img" src="images/img-cos-en-xs.svg">
+          </div>
+        </div>
+      </div>
+      <!-- Tots -->
     </div>
   </div>
 		<script>
