--- a/animacions/cuerpo-humano-ca.html
+++ b/animacions/cuerpo-humano-ca.html
@@ -1069,8 +1069,9 @@
 			// Get height of document
 			function getDocHeight(doc) {
 				doc = doc || document;
-				var body = doc.body;
-				var height = Math.max( body.scrollHeight, body.offsetHeight);
+				var body = doc.body, html = doc.documentElement;
+				var height = Math.max( body.scrollHeight, body.offsetHeight, 
+					html.clientHeight, html.scrollHeight, html.offsetHeight );
 				return height;
 			}
 
