--- a/animacions/menu-en.html
+++ b/animacions/menu-en.html
@@ -533,7 +533,7 @@
     </style>
 
     <!-- Conclusions -->
-    <a href="#soluciones" class="btn disable b-conclusions">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#soluciones" target="_parent" class="btn disable b-conclusions">
       <g class="Conclusions">
         <rect class="bg-conclusions st0" x="811.3" y="-0.2" width="162.1" height="152.4"/>
         <g class="conclusions-txt">
@@ -568,7 +568,7 @@
     <!-- Conclusions -->
 
     <!-- Temperatura -->
-    <a href="#temperatura" class="btn disable b-temperatura">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#temperatura" target="_parent" class="btn disable b-temperatura">
       <g class="Temperatura">
         <rect class="bg-temperatura st7" x="649.2" y="-0.2" width="162.1" height="152.4"/>
         <g class="temperatura-txt">
@@ -663,7 +663,7 @@
     <!-- Temperatura -->
 
     <!-- EspaisNaturals -->
-    <a href="#espacios-naturales" class="btn disable b-espaisnaturals">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#espacios-naturales" target="_parent" class="btn disable b-espaisnaturals">
       <g class="EspaisNaturals">
         <rect class="bg-espaisnaturals st17" x="325.1" y="-0.2" width="162.1" height="152.4"/>
         <g class="espaisnaturals-txt">
@@ -718,7 +718,7 @@
     <!-- EspaisNaturals -->
 
     <!-- ActivitatFisica -->
-    <a href="#actividad-fisica" class="btn disable b-activitatfisica">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#actividad-fisica" target="_parent" class="btn disable b-activitatfisica">
       <g class="ActivitatFisica">
         <rect class="bg-activitatfisica st22" x="487.2" y="-0.2" width="162.1" height="152.4"/>
         <g class="activitatfisica-txt">
@@ -817,7 +817,7 @@
     <!-- ActivitatFisica -->
 
     <!-- Soroll -->
-    <a href="#ruido" class="btn disable b-soroll">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#ruido" target="_parent" class="btn disable b-soroll">
       <g class="Soroll">
         <rect class="bg-soroll st27" x="163" y="-0.2" width="162.1" height="152.4"/>
         <g class="soroll-txt">
@@ -932,7 +932,7 @@
     <!-- Soroll -->
 
     <!-- Contaminacio -->
-    <a href="#contaminacion" class="btn b-contaminacio">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#contaminacion" target="_parent" class="btn b-contaminacio">
       <g class="Contaminacio">
         <rect class="bg-contaminacio st35" x="0.9" y="-0.2" width="162.1" height="152.4"/>
         <g class="contaminacio-txt">
@@ -1602,7 +1602,7 @@
     </style>
 
     <!-- Conclusions -->
-    <a href="#soluciones" class="btn disable b-conclusions">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#soluciones" target="_parent" class="btn disable b-conclusions">
       <g class="Conclusions">
         <rect class="bg-conclusions st0" x="163" y="304.5" width="162.1" height="152.4"/>
         <g class="conclusions-txt">
@@ -1637,7 +1637,7 @@
     <!-- Conclusions -->
 
     <!-- Temperatura -->
-    <a href="#temperatura" class="btn disable b-temperatura">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#temperatura" target="_parent" class="btn disable b-temperatura">
       <g class="Temperatura">
         <rect class="bg-temperatura st7" x="0.9" y="304.5" width="162.1" height="152.4"/>
         <g class="temperatura-txt">
@@ -1730,7 +1730,7 @@
     <!-- Temperatura -->
 
     <!-- EspaisNaturals -->
-    <a href="#espacios-naturales" class="btn disable b-espaisnaturals">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#espacios-naturales" target="_parent" class="btn disable b-espaisnaturals">
       <g class="EspaisNaturals">
         <rect class="bg-espaisnaturals st17" x="0.9" y="152.1" width="162.1" height="152.4"/>
         <g class="espaisnaturals-txt">
@@ -1785,7 +1785,7 @@
     <!-- EspaisNaturals -->
 
     <!-- ActivitatFisica -->
-    <a href="#actividad-fisica" class="btn disable b-activitatfisica">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#actividad-fisica" target="_parent" class="btn disable b-activitatfisica">
       <g class="ActivitatFisica">
         <rect class="bg-activitatfisica st22" x="163" y="152.1" width="162.1" height="152.4"/>
         <g class="activitatfisica-txt">
@@ -1883,7 +1883,7 @@
     <!-- ActivitatFisica -->
 
     <!-- Soroll -->
-    <a href="#ruido" class="btn disable b-soroll">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#ruido" target="_parent" class="btn disable b-soroll">
       <g class="Soroll">
         <rect class="bg-soroll st27" x="163" y="-0.2" width="162.1" height="152.4"/>
         <g class="soroll-txt">
@@ -1998,7 +1998,7 @@
     <!-- Soroll -->
 
     <!-- Contaminacio -->
-    <a href="#contaminacion" class="btn b-contaminacio">
+    <a href="https://www-uat.isglobal.org/ciudadesquequeremos#contaminacion" target="_parent" class="btn b-contaminacio">
       <g class="Contaminacio">
         <rect class="bg-contaminacio st35" x="0.9" y="-0.2" width="162.1" height="152.4"/>
         <g class="contaminacio-txt">
